Fixed a cutoff issue with the card zoom effect

--- a/public/less/collection/_cards.less
+++ b/public/less/collection/_cards.less
@@ -82,7 +82,7 @@
 		position: static;
 		width: auto;
 		border-radius: initial;
-		overflow: none;
+		overflow: visible;
 		box-shadow: none;
 		border: none;
 	});
